--- a/penguins/container/Dockerfile
+++ b/penguins/container/Dockerfile
@@ -1,23 +1,13 @@
 FROM arm64v8/ubuntu
 
 RUN apt-get -y update && apt-get install -y --no-install-recommends \
-    build-essential \
-    wget \
-    nginx \
-    ca-certificates \
-    gcc \
-    linux-headers-generic \
-    libc-dev
+    build-essential wget nginx ca-certificates gcc \
+    linux-headers-generic libc-dev
 
-RUN wget https://repo.anaconda.com/miniconda/Miniconda3-py38_4.9.2-Linux-aarch64.sh
-# RUN wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-aarch64.sh
-
-RUN chmod a+x Miniconda3-py38_4.9.2-Linux-aarch64.sh
-# RUN chmod a+x Miniconda3-latest-Linux-aarch64.sh
-
-RUN bash Miniconda3-py38_4.9.2-Linux-aarch64.sh -b
-# RUN bash Miniconda3-latest-Linux-aarch64.sh -b
+RUN wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-aarch64.sh -O miniconda.sh
+RUN chmod a+x miniconda.sh
 ENV PATH /root/miniconda3/bin/:$PATH
+RUN bash miniconda.sh -b
 
 COPY ml-dependencies.yml ./
 RUN conda env create -f ml-dependencies.yml
