--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 numpy
 pandas
+matplotlib
 scikit-learn
 plotly
 python-dotenv
@@ -10,3 +11,6 @@ sagemaker[local]
 black
 flake8
 nbformat
+nbdev
+nbclient
+ipykernel
