--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ matplotlib
 scikit-learn
 python-dotenv
 ipytest
-tensorflow
-sagemaker==2.192.1
+tensorflow==2.11.0
+sagemaker==2.203.0
 sagemaker[local]
 ruff
 nbformat
