--- a/settings.ini
+++ b/settings.ini
@@ -6,7 +6,7 @@
 repo = ml.school
 lib_name = %(repo)s
 version = 0.0.1
-min_python = 3.7
+min_python = 3.9
 license = apache2
 black_formatting = False
 
@@ -30,7 +30,7 @@ title = %(lib_name)s
 audience = Developers
 author = Santiago L. Valdarrama
 author_email = svpino@gmail.com
-copyright = 2023 onwards, %(author)s
+copyright = 2024 Tideily LLC
 description = Machine Learning School
 keywords = nbdev jupyter notebook python
 language = English
