--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,11 @@
-[tool.black]
+[tool.ruff]
 line-length = 88
+indent-width = 4
+target-version = "py310"
+extend-include = ["*.ipynb"]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
