--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,6 @@ quote-style = "double"
 indent-style = "space"
 skip-magic-trailing-comma = false
 line-ending = "auto"
+
+[tool.ruff.lint]
+ignore = ["E402"]
