--- a/program/metaflow/deployment-cfn-template.yaml
+++ b/program/metaflow/deployment-cfn-template.yaml
@@ -47,13 +47,26 @@ Resources:
             Statement:
               - Effect: "Allow"
                 Action:
+                  - "batch:TerminateJob"
+                  - "batch:DescribeJobs"
+                  - "batch:DescribeJobDefinitions"
+                  - "batch:DescribeJobQueues"
+                  - "batch:RegisterJobDefinition"
+                  - "batch:SubmitJob"
+                  - "batch:DescribeComputeEnvironments"
+                  - "ecr:DescribeRepositories"
+                  - "ecr:CreateRepository"
+                  - "ecr:GetAuthorizationToken"
+                  - "ecr:InitiateLayerUpload"
+                  - "ecr:UploadLayerPart"
+                  - "ecr:CompleteLayerUpload"
+                  - "ecr:BatchCheckLayerAvailability"
+                  - "ecr:GetDownloadUrlForLayer"
+                  - "ecr:BatchGetImage"
+                  - "ecr:DeleteRepository"
+                  - "ecr:PutImage"
                   - "iam:PassRole"
                   - "iam:GetRole"
-                Resource:
-                  - "*"
-
-              - Effect: "Allow"
-                Action:
                   - "sagemaker:ListEndpoints"
                   - "sagemaker:DescribeEndpoint"
                   - "sagemaker:CreateEndpoint"
@@ -66,22 +79,6 @@ Resources:
                   - "sagemaker:ListTags"
                   - "sagemaker:AddTags"
                   - "sagemaker:InvokeEndpoint"
-                Resource:
-                  - "*"
-
-              - Effect: "Allow"
-                Action:
-                  - "ecr:DescribeRepositories"
-                  - "ecr:CreateRepository"
-                  - "ecr:GetAuthorizationToken"
-                  - "ecr:InitiateLayerUpload"
-                  - "ecr:UploadLayerPart"
-                  - "ecr:CompleteLayerUpload"
-                  - "ecr:BatchCheckLayerAvailability"
-                  - "ecr:GetDownloadUrlForLayer"
-                  - "ecr:BatchGetImage"
-                  - "ecr:DeleteRepository"
-                  - "ecr:PutImage"
                 Resource: 
                   - "*"
 
