--- a/program/metaflow/deployment-cfn-template.yaml
+++ b/program/metaflow/deployment-cfn-template.yaml
@@ -119,6 +119,60 @@ Resources:
       Users: 
         - !Ref User
 
+  EC2SecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Allow inbound traffic on port 5000
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 5000
+          ToPort: 5000
+          CidrIp: 0.0.0.0/0
+
+  RemoteEC2Instance:
+    Type: AWS::EC2::Instance
+    Properties:
+      InstanceType: t2.large
+      ImageId: aws/service/canonical/ubuntu/server/20.04/stable/current/amd64/hvm/ebs-gp2/ami-id
+      DisableApiTermination: true
+      InstanceInitiatedShutdownBehavior: stop
+      SecurityGroupIds: 
+        - !Ref EC2SecurityGroup
+      BlockDeviceMappings:
+        - DeviceName: /dev/sda1
+          Ebs:
+            VolumeSize: 128
+            VolumeType: gp3
+      Tags:
+        - Key: Name
+          Value: mlschool
+      UserData:
+        Fn::Base64: !Sub |
+          #!/bin/bash
+          apt-get update
+          apt-get install -y build-essential python3.12-venv zlib1g-dev unzip
+
+          # Create virtual environment
+          python3 -m venv /home/ubuntu/.venv
+
+          # Activate virtual environment and install mlflow
+          source /home/ubuntu/.venv/bin/activate
+          pip install mlflow
+
+          # Create a script to activate the virtual environment on instance start
+          cat << EOF > /home/ubuntu/activate_venv.sh
+          #!/bin/bash
+          source /home/ubuntu/.venv/bin/activate
+          EOF
+
+          chmod +x /home/ubuntu/activate_venv.sh
+
+          # Add the activation script to .bashrc to run on instance start
+          echo ". /home/ubuntu/activate_venv.sh" >> /home/ubuntu/.bashrc
+
+          # Set ownership of the virtual environment and script to the ubuntu user
+          chown -R ubuntu:ubuntu /home/ubuntu/.venv /home/ubuntu/activate_venv.sh
+
 Outputs:
   User:
     Description: 'Name of the user'
