--- a/program/metaflow/cloud-formation/mlschool-cfn.yaml
+++ b/program/metaflow/cloud-formation/mlschool-cfn.yaml
@@ -1,12 +1,10 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: 'CloudFormation template for setting up program resources'
+Description: 'Machine Learning School - User account and custom policies.'
 
 Parameters:
   UserName:
     Type: String
     Description: 'User name for the IAM User'
-    Default: 'penguin'
-
 
 Resources:
   User:
@@ -41,10 +39,24 @@ Resources:
           
       Path: /
       Policies:
-        - PolicyName: "mlschool"
+        - PolicyName: "mlschool-custom-policy"
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
+
+              - Effect: "Allow"
+                Sid: "CloudFormation"
+                Action:
+                  - "cloudformation:CreateStack"
+                  - "cloudformation:DeleteStack"
+                  - "cloudformation:UpdateStack"
+                  - "cloudformation:DescribeStacks"
+                  - "cloudformation:DescribeStackEvents"
+                  - "cloudformation:DescribeStackResource"
+                  - "cloudformation:DescribeStackResources"
+                Resource:
+                  - "*"
+
               - Effect: "Allow"
                 Sid: "Batch"
                 Action:
@@ -56,7 +68,7 @@ Resources:
                   - "batch:SubmitJob"
                   - "batch:DescribeComputeEnvironments"
                 Resource: 
-                  - "*"
+                  - !Sub "arn:aws:batch:${AWS::Region}:${AWS::AccountId}:*"
 
               - Effect: "Allow"
                 Sid: "Events"
@@ -66,13 +78,32 @@ Resources:
                   - "events:DisableRule"
                   - "events:PutRule"
                 Resource:
-                  - "*"
+                  - !Sub "arn:aws:events:${AWS::Region}:${AWS::AccountId}:rule/*"
 
               - Effect: "Allow"
                 Sid: "IAM"
                 Action:
                   - "iam:PassRole"
                   - "iam:GetRole"
+                Resource:
+                  - "*"
+
+              - Effect: "Allow"
+                Sid: "EC2"
+                Action:
+                  - "ec2:CreateKeyPair"
+                  - "ec2:DeleteKeyPair"
+                  - "ec2:DescribeKeyPairs"
+                  - "ec2:CreateSecurityGroup"
+                  - "ec2:DeleteSecurityGroup"
+                  - "ec2:DescribeSecurityGroups"
+                  - "ec2:AuthorizeSecurityGroupIngress"
+                  - "ec2:RevokeSecurityGroupIngress"
+                  - "ec2:RunInstances"
+                  - "ec2:TerminateInstances"
+                  - "ec2:DescribeInstances"
+                  - "ec2:CreateTags"
+                  - "ec2:DescribeImages"
                 Resource:
                   - "*"
 
@@ -109,7 +140,19 @@ Resources:
                   - "sagemaker:AddTags"
                   - "sagemaker:InvokeEndpoint"
                 Resource:
-                  - "*"
+                  - !Sub "arn:aws:sagemaker:${AWS::Region}:${AWS::AccountId}:endpoint/*"
+                  - !Sub "arn:aws:sagemaker:${AWS::Region}:${AWS::AccountId}:model/*"
+                  - !Sub "arn:aws:sagemaker:${AWS::Region}:${AWS::AccountId}:endpoint-config/*"
+
+              - Effect: "Allow"
+                Sid: "SSM"
+                Action:
+                  - "ssm:GetParameter"
+                  - "ssm:GetParameters"
+                  - "ssm:PutParameter"
+                  - "ssm:DeleteParameter"
+                Resource: 
+                  - !Sub "arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/ec2/keypair/*"
 
               - Effect: "Allow"
                 Sid: "States"
@@ -122,7 +165,7 @@ Resources:
                   - "states:ListExecutions"
                   - "states:StopExecution"
                 Resource:
-                  - "*"
+                  - !Sub 'arn:aws:states:${AWS::Region}:${AWS::AccountId}:stateMachine:*'
 
               - Effect: "Allow"
                 Sid: "S3"
@@ -136,7 +179,7 @@ Resources:
                   - "s3:GetObject"
                   - "s3:DeleteObject"
                 Resource:
-                  - "arn:aws:s3:::*"
+                  - !Sub "arn:aws:s3:::*"
 
   UserPolicy:
     Type: 'AWS::IAM::Policy'
@@ -151,25 +194,22 @@ Resources:
       Users: 
         - !Ref User
 
-
-
 Outputs:
   User:
-    Description: 'Name of the user'
+    Description: The user account we'll use to configure the AWS CLI and authenticate with AWS.
     Value: !Ref User
 
-  AccountId:
-    Description: 'AWS Account ID'
-    Value: !Ref 'AWS::AccountId'
-
-  Region:
-    Description: 'AWS Region'
-    Value: !Ref 'AWS::Region'
-    
-  AccessKeyId:
-    Description: 'Access Key ID'
+  AccessKeyId:  
+    Description: >
+      The Access Key ID associated with the user. To get access to the Secret Access Key, 
+      navigate to the Secrets Manager service in the AWS console and retrieve the secret value 
+      related to the `/credentials/mlschool` key.
     Value: !Ref UserCredentials
 
+  Region:
+    Description: The AWS Region where the program resources will be provisioned.
+    Value: !Ref 'AWS::Region'
+    
   Role:
-    Description: 'Amazon Resource Name (ARN) of the role'
+    Description: 'The Role ARN associated with the user.'
     Value: !GetAtt 'Role.Arn'
