--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
-numpy
-pandas
-matplotlib
-comet-ml
-scikit-learn
 python-dotenv
-ipytest
-tensorflow==2.14
-sagemaker
-sagemaker[local]
-ruff
-nbformat
-nbdev
-nbclient
-ipykernel
-Flask
+pytest
+
+mlflow
+awscurl
+packaging
+setuptools
+evidently
+keras
+scikit-learn
+pandas
+numpy
+jax[cpu]
+
+metaflow
+metaflow-card-html
+
+azure-ai-ml
+azureml-mlflow
