Updated training and inference files.

--- a/logging.conf
+++ b/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root, botocore.credentials, jax
+keys=root, botocore.credentials, jax, mlflow
 
 [handlers]
 keys=consoleHandler
@@ -20,6 +20,11 @@ qualname=botocore
 level=ERROR
 handlers=consoleHandler
 qualname=jax
+
+[logger_mlflow]
+level=ERROR
+handlers=consoleHandler
+qualname=mlflow
 
 [handler_consoleHandler]
 class=StreamHandler
