--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,8 @@ ignore = ["ANN001", "ANN101", "ANN201", "ANN202", "B006", "BLE001", "E402", "PD9
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["F401"]
 "**/tests/*.py" = ["D103"]
+
+[tool.pyright]
+venvPath = "."
+venv = ".venv"
+typeCheckingMode = "off"
