--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ line-length = 88
 indent-width = 4
 target-version = "py310"
 extend-include = ["*.ipynb"]
+extend-select = ["I"]
 
 [tool.ruff.format]
 quote-style = "double"
