--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,29 @@
+[project]
+name = "mlschool"
+version = "0.1.0"
+description = "Building Machine Learning Systems"
+readme = "README.md"
+requires-python = ">=3.12"
+dependencies = [
+    "awscurl>=0.36",
+    "azure-ai-ml>=1.22.4",
+    "azureml-mlflow>=1.58.0",
+    "evidently>=0.5.0",
+    "jax[cpu]>=0.4.36",
+    "keras>=3.7.0",
+    "metaflow>=2.12.37",
+    "metaflow-card-html>=1.0.2",
+    "mlflow[extras]>=2.18.0",
+    "mlserver>=1.6.1",
+    "mlserver-mlflow>=1.6.1",
+    "numpy>=2.0.2",
+    "pandas>=2.2.3",
+    "pylint>=3.3.2",
+    "pytest>=8.3.4",
+    "python-dotenv>=1.0.1",
+    "scikit-learn>=1.5.2",
+]
+
 [tool.ruff]
 line-length = 88
 indent-width = 4
@@ -14,7 +40,6 @@ line-ending = "auto"
 [tool.ruff.lint]
 select = ["ALL"]
 ignore = ["ANN001", "ANN101", "ANN201", "ANN202", "B006", "BLE001", "E402", "PD901", "PLR0913", "S101", "S311", "T201"]
-
 
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["F401"]
