--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ dependencies = [
     "azure-ai-ml>=1.22.4",
     "azureml-mlflow>=1.58.0",
     "evidently>=0.5.0",
+    "ipykernel>=6.29.5",
     "jax[cpu]>=0.4.36",
+    "jupyter>=1.1.1",
     "keras>=3.7.0",
     "metaflow>=2.12.37",
     "metaflow-card-html>=1.0.2",
