Updated model register documentation
- Updated training documentation to remove DeprecationWarning suppression from pytest commands.

- Added a test command in the justfile for running unit tests.

- Improved clarity in the model registration process documentation.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ venv = ".venv"
 
 [tool.pytest.ini_options]
 pythonpath="pipelines"
+addopts="--maxfail=2 -rf -W ignore::DeprecationWarning"
 markers = [
     "integration: marks integration tests (deselect with '-m \"not integration\"')"
 ]
