--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,10 @@ ignore = ["ANN001", "ANN101", "ANN201", "ANN202", "B006", "BLE001", "E402", "PD9
 [tool.pyright]
 venvPath = "./../."
 venv = ".venv"
+typeCheckingMode = "off"
+
+[tool.pyright.diagnosticSeverityOverrides]
+reportCallIssue = "off"
 
 [tool.pytest.ini_options]
 pythonpath="pipelines"
