Monitoring in AWS is now ready

--- a/cloud-formation/mlschool-cfn.yaml
+++ b/cloud-formation/mlschool-cfn.yaml
@@ -125,7 +125,7 @@ Resources:
                   - "*"
 
               - Effect: "Allow"
-                Sid: "SageMaker"
+                Sid: "Sagemaker"
                 Action:
                   - "sagemaker:ListEndpoints"
                   - "sagemaker:DescribeEndpoint"
