--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "azure-ai-ml>=1.22.4",
     "azureml-mlflow>=1.58.0",
     "evidently>=0.5.0",
+    "geventhttpclient>=2.3.3",
     "ipykernel>=6.29.5",
     "jax[cpu]>=0.4.36",
     "jupyter>=1.1.1",
