Replaced jax by torch backend and created a dev container

--- a/logging.conf
+++ b/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root, botocore.credentials, jax, mlflow
+keys=root, botocore.credentials, mlflow
 
 [handlers]
 keys=consoleHandler
@@ -15,11 +15,6 @@ handlers=consoleHandler
 level=ERROR
 handlers=consoleHandler
 qualname=botocore
-
-[logger_jax]
-level=ERROR
-handlers=consoleHandler
-qualname=jax
 
 [logger_mlflow]
 level=ERROR
