--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,6 +3,6 @@ FROM --platform=linux/amd64 mcr.microsoft.com/devcontainers/python:1-3.12-bullse
 # RUN apt-get update \
 #     && apt-get -y install --no-install-recommends curl
 
-RUN curl -LsSf https://astral.sh/uv/install.sh | sh
+# Install just
 RUN pipx install rust-just
 
