--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,58 +1,41 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the
-// README at: https://github.com/devcontainers/templates/tree/main/src/python
 {
-	"name": "Python 3",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/python:1-3.12-bullseye",
-	// "runArgs": ["--platform=linux/amd64"],
-	//  "build": {
-	// 	"dockerfile": "Dockerfile",
-	// 	"options": [
-    //         "--platform=linux/amd64"
-    //     ]
-	// 	// "args": {
-	// 	// 	"platform": "linux/amd64"
-	// 	// }
-	//  },
-
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
-
-	"forwardPorts": [5000],
-
-	"containerEnv":{
-		"KERAS_BACKEND": "jax",
-		"MLFLOW_TRACKING_URI": "http://127.0.0.1:5000"
-	},	
-
-
-	// Configure tool-specific properties.
-	"customizations": {
-		"vscode": {
-			"extensions": [
-				"ms-python.python",
-				"charliermarsh.ruff",
-				"ms-toolsai.jupyter",
-				"tideily.mlschool"
-			]
-		}
-	},
-
-	"postCreateCommand": {
-		// "micromamba": "curl -L https://micro.mamba.pm/install.sh | sh",
-		"uv": "curl -LsSf https://astral.sh/uv/install.sh | sh",
-		"just": "pipx install rust-just"
-	},
-	"features": {
-		"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
-			"moby": true,
-			"installDockerBuildx": true,
-			"installDockerComposeSwitch": true,
-			"version": "latest",
-			"dockerDashComposeVersion": "none"
-		}
-	}
-
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
+    "name": "Python 3",
+    "build": {
+        "dockerfile": "Dockerfile",
+        "options": [
+            "--platform=linux/amd64"
+        ]
+    },
+    "forwardPorts": [
+        5000, 8324, 8334, 8080
+    ],
+    "containerEnv": {
+        "KERAS_BACKEND": "torch",
+        "MLFLOW_TRACKING_URI": "http://127.0.0.1:5000",
+        "ENDPOINT_NAME": "penguins"
+    },
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                "ms-python.python",
+                "ms-toolsai.jupyter",
+                "charliermarsh.ruff",
+                "tideily.mlschool"
+            ]
+        }
+    },
+    "postCreateCommand": {
+        "uv": "curl -LsSf https://astral.sh/uv/install.sh | sh"
+    },
+    "features": {
+        "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
+            "moby": true,
+            "installDockerBuildx": true,
+            "installDockerComposeSwitch": true,
+            "version": "latest",
+            "dockerDashComposeVersion": "none"
+        }
+    }
+    // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+    // "remoteUser": "root"
 }
