chore: increase uv download timeout from 30[s] to 300[s]

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,8 @@
     "containerEnv": {
         "KERAS_BACKEND": "torch",
         "MLFLOW_TRACKING_URI": "http://127.0.0.1:5000",
-        "ENDPOINT_NAME": "penguins"
+        "ENDPOINT_NAME": "penguins",
+        "UV_HTTP_TIMEOUT": 300
     },
     "customizations": {
         "vscode": {
