--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,7 @@
         "KERAS_BACKEND": "torch",
         "MLFLOW_TRACKING_URI": "http://127.0.0.1:5000",
         "ENDPOINT_NAME": "penguins",
-        "UV_HTTP_TIMEOUT": 300
+        "UV_HTTP_TIMEOUT": "300"
     },
     "customizations": {
         "vscode": {
