--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,9 +12,7 @@
     "containerEnv": {
         "KERAS_BACKEND": "torch",
         "MLFLOW_TRACKING_URI": "http://127.0.0.1:5000",
-        "ENDPOINT_NAME": "penguins",
-
-        "UV_HTTP_TIMEOUT": "300" // Timeout (in seconds) for uv HTTP requests.
+        "ENDPOINT_NAME": "penguins"
     },
     "customizations": {
         "vscode": {
@@ -25,9 +23,6 @@
                 "tideily.mlschool"
             ]
         }
-    },
-    "postCreateCommand": {
-        "uv": "curl -LsSf https://astral.sh/uv/install.sh | sh"
     },
     "features": {
         "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
