Added missing permission

--- a/cloud-formation/mlschool-cfn.yaml
+++ b/cloud-formation/mlschool-cfn.yaml
@@ -151,6 +151,7 @@ Resources:
                   - "ssm:DeleteParameter"
                 Resource: 
                   - !Sub "arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/ec2/keypair/*"
+                  - !Sub "arn:aws:ssm:${AWS::Region}::parameter/aws/service/canonical/ubuntu/server/*"
 
               - Effect: "Allow"
                 Sid: "States"
