--- a/cloud-formation/mlflow-cfn.yaml
+++ b/cloud-formation/mlflow-cfn.yaml
@@ -41,7 +41,7 @@ Resources:
 
           # Activate virtual environment and install mlflow
           source /home/ubuntu/.venv/bin/activate
-          pip install mlflow
+          pip install mlflow==2.20.0
 
           # Create a script to activate the virtual environment on instance start
           cat << EOF > /home/ubuntu/activate_venv.sh
