Replaced torch by tensorflow

--- a/logging.conf
+++ b/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root, botocore.credentials, mlflow
+keys=root, botocore.credentials, tensorflow, mlflow
 
 [handlers]
 keys=consoleHandler
@@ -15,6 +15,11 @@ handlers=consoleHandler
 level=ERROR
 handlers=consoleHandler
 qualname=botocore
+
+[logger_tensorflow]
+level=ERROR
+handlers=consoleHandler
+qualname=tensorflow
 
 [logger_mlflow]
 level=ERROR
