--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,18 +10,18 @@ dependencies = [
     "geventhttpclient>=2.3.3",
     "ipykernel>=6.29.5",
     "jupyter>=1.1.1",
-    "keras>=3.7.0",
+    "keras==3.8.0",
     "metaflow>=2.13",
     "metaflow-card-html>=1.0.2",
-    "mlflow[extras]>=2.18.0",
+    "mlflow[extras]==2.20.2",
     "mlserver>=1.6.1",
     "mlserver-mlflow>=1.6.1",
     "numpy>=1.26.4",
     "pandas>=2.2.3",
     "pylint>=3.3.2",
     "pytest>=8.3.4",
-    "scikit-learn>=1.6.0",
-    "torch>=2.6.0",
+    "scikit-learn==1.6.1",
+    "tensorflow==2.18.0",
 ]
 
 [tool.ruff]
