--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,16 +6,17 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "awscurl>=0.36",
+    "boto3>=1.36.25",
     "evidently>=0.5.0",
     "geventhttpclient>=2.3.3",
+    "httpx>=0.28.1",
     "ipykernel>=6.29.5",
     "jupyter>=1.1.1",
     "keras==3.8.0",
+    "mcp[cli]>=1.3.0",
     "metaflow>=2.13",
     "metaflow-card-html>=1.0.2",
     "mlflow[extras]==2.20.2",
-    "mlserver>=1.6.1",
-    "mlserver-mlflow>=1.6.1",
     "numpy>=1.26.4",
     "pandas>=2.2.3",
     "pylint>=3.3.2",
