Improved CFN security

--- a/cloud-formation/mlschool-cfn.yaml
+++ b/cloud-formation/mlschool-cfn.yaml
@@ -22,6 +22,7 @@ Resources:
     Type: AWS::SecretsManager::Secret
     Properties:
       Name: '/credentials/mlschool'
+      Description: 'Access credentials for the Machine Learning School user'
       SecretString: !GetAtt UserCredentials.SecretAccessKey
 
   Role:
@@ -195,12 +196,28 @@ Resources:
                   - "s3:GetObject"
                   - "s3:DeleteObject"
                 Resource:
-                  - !Sub "arn:aws:s3:::*"
+                  - !Sub "arn:aws:s3:::${Bucket}"
+                  - !Sub "arn:aws:s3:::${Bucket}/*"
 
+  # Create an S3 bucket with a unique name using the stack UUID suffix.
   Bucket:
     Type: 'AWS::S3::Bucket'
     Properties:
-      BucketName: !Sub 'mlschool-${AWS::AccountId}'
+      BucketName: !Join 
+        - '-'
+        - - 'mlschool'
+          - !Select [2, !Split ['/', !Ref AWS::StackId]]
+      BucketEncryption:
+        ServerSideEncryptionConfiguration:
+          - ServerSideEncryptionByDefault:
+              SSEAlgorithm: AES256
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: true
+        BlockPublicPolicy: true
+        IgnorePublicAcls: true
+        RestrictPublicBuckets: true
+      VersioningConfiguration:
+        Status: Enabled
 
   UserPolicy:
     Type: 'AWS::IAM::Policy'
