Updated tensorflow logger to jax

--- a/logging.conf
+++ b/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root, botocore.credentials, tensorflow, mlflow
+keys=root, botocore.credentials, jax, mlflow
 
 [handlers]
 keys=consoleHandler
@@ -16,10 +16,10 @@ level=ERROR
 handlers=consoleHandler
 qualname=botocore
 
-[logger_tensorflow]
+[logger_jax]
 level=ERROR
 handlers=consoleHandler
-qualname=tensorflow
+qualname=jax
 
 [logger_mlflow]
 level=ERROR
