--- a/logging.conf
+++ b/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root, botocore.credentials, jax, mlflow
+keys=root, mlschool,botocore.credentials, tensorflow, mlflow
 
 [handlers]
 keys=consoleHandler
@@ -11,15 +11,21 @@ keys=simpleFormatter
 level=INFO
 handlers=consoleHandler
 
+[logger_mlschool]
+level=INFO
+handlers=consoleHandler
+qualname=mlschool
+propagate=0
+
 [logger_botocore.credentials]
 level=ERROR
 handlers=consoleHandler
-qualname=botocore
+qualname=botocoreCredentials
 
-[logger_jax]
+[logger_tensorflow]
 level=ERROR
 handlers=consoleHandler
-qualname=jax
+qualname=tensorflow
 
 [logger_mlflow]
 level=ERROR
