--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "pandas>=2.2.3",
     "pylint>=3.3.2",
     "pytest>=8.3.4",
+    "ruff>=0.11.6",
     "scikit-learn==1.6.1",
     "tensorflow==2.18.0",
 ]
@@ -29,9 +30,9 @@ dependencies = [
 [tool.ruff]
 line-length = 88
 indent-width = 4
-target-version = "py310"
+target-version = "py312"
 extend-include = ["*.ipynb"]
-extend-select = ["I"]
+
 
 [tool.ruff.format]
 quote-style = "double"
@@ -41,9 +42,10 @@ line-ending = "auto"
 
 [tool.ruff.lint]
 select = ["ALL"]
-ignore = ["ANN001", "ANN101", "ANN201", "ANN202", "B006", "BLE001", "E402", "PD901", "PLR0913", "S101", "S311", "T201"]
+ignore = ["ANN001", "ANN201", "ANN202", "B006", "BLE001", "COM812", "D203", "D213", "E402", "PD901", "PLR0913", "S101", "S311", "T201"]
+extend-select = ["E", "I", "F"]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
 "**/tests/*.py" = ["D103"]
 
