--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@ typeCheckingMode = "off"
 reportCallIssue = "off"
 
 [tool.pytest.ini_options]
-pythonpath="pipelines"
+pythonpath="."
 addopts="--maxfail=2 -rf -W ignore::DeprecationWarning"
 markers = [
     "integration: marks integration tests (deselect with '-m \"not integration\"')"
