--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
     "jupyter>=1.1.1",
     "keras>=3.8.0,<3.9.0",
     "mcp[cli]>=1.3.0",
-    "metaflow>=2.15.14",
+    "metaflow==2.15.17",
     "metaflow-card-html>=1.0.2",
     "mlflow[extras]==2.20.2",
     "numpy>=1.26.4",
