--- a/config/sagemaker.yml
+++ b/config/sagemaker.yml
@@ -1,5 +1,8 @@
 project: penguins
 
+logging: logging.conf
+mlflow_tracking_uri: http://127.0.0.1:5000/
+
 backend:
   backend: backend.SageMaker
   target: ${ENDPOINT_NAME}
