Test cases are now running with the new config and decorators

--- a/config/local.yml
+++ b/config/local.yml
@@ -4,6 +4,6 @@ logging: logging.conf
 mlflow_tracking_uri: http://127.0.0.1:5000/
 
 backend:
-  backend: backend.Local
+  module: backend.Local
   database: penguins.db
   target: http://127.0.0.1:8080/invocations
