Traffic and Labeling pipelines are now working

--- a/config/local.yml
+++ b/config/local.yml
@@ -5,5 +5,5 @@ mlflow_tracking_uri: http://127.0.0.1:5000/
 
 backend:
   module: backend.Local
-  database: penguins.db
+  database: data/penguins.db
   target: http://127.0.0.1:8080/invocations
