--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "langchain-google-genai>=2.1.9",
     "pyyaml>=6.0.2",
     "litellm>=1.76.1",
+    "google-adk>=1.13.0",
 ]
 
 [tool.ruff]
