--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,7 +21,10 @@
         
         // We need to set the PYTHONPATH environment variable to the /src directory
         // so Python can find the project modules.
-        "PYTHONPATH": "/workspaces/ml.school/src"
+        "PYTHONPATH": "/workspaces/ml.school/src",
+
+        // We want to suppress MLflow's printing of logs to the terminal.
+        "MLFLOW_SUPPRESS_PRINTING_URL_TO_STDOUT": "1"
     },
     "customizations": {
         "vscode": {
