--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,11 @@ dependencies = [
     "httpx>=0.28.1",
     "ipykernel>=6.29.5",
     "jupyter>=1.1.1",
-    "keras>=3.8.0,<3.9.0",
+    "keras==3.11.3",
     "mcp[cli]>=1.3.0",
     "metaflow==2.18.0",
     "metaflow-card-html>=1.0.2",
-    "mlflow[extras]==2.20.2",
+    "mlflow[extras]==3.3.2",
     "numpy>=1.26.4",
     "pandas>=2.2.3",
     "pylint>=3.3.2",
