Working on tic-tac-toe multi-agent system

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "pyyaml>=6.0.2",
     "litellm>=1.76.1",
     "google-adk>=1.13.0",
+    "pytest-asyncio>=1.2.0",
 ]
 
 [tool.ruff]
