Update project configuration and documentation for enhanced development workflow
- Add PYTHONPATH environment variable to Claude settings
- Expand CLAUDE.md with comprehensive project documentation including pipelines, agents, and MLOps practices
- Update README title to "Building AI/ML Systems That Don't Suck"
- Configure pytest to use src as pythonpath
- Add Claude Code agents configuration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,7 +67,7 @@ reportCallIssue = "off"
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
-pythonpath="."
+pythonpath="src"
 addopts="--maxfail=2 -rf -W ignore::DeprecationWarning"
 markers = [
     "integration: marks integration tests (deselect with '-m \"not integration\"')"
