Refactor Claude Code configuration and documentation
- Rename documentation-reviewer to guide-reviewer agent
- Scope guide-reviewer to focus on .guide/ directory
- Add guide command for quick access to guide reviewer
- Update CLAUDE.md project structure with complete .guide/ mapping
- Remove redundant testing and code quality sections from CLAUDE.md
- Fix trailing comma syntax error in devcontainer.json

These changes improve the Claude Code setup by providing more focused
documentation review capabilities and cleaner project configuration.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,7 +29,7 @@
         // Google ADK outputs a warning message whenever we use LiteLLM with a Gemini
         // model instead of using Gemini directly. We can suppress these warnings by
         // setting this environment variable.
-        "ADK_SUPPRESS_GEMINI_LITELLM_WARNINGS": "true"
+        "ADK_SUPPRESS_GEMINI_LITELLM_WARNINGS": "true",
     },
     "customizations": {
         "vscode": {
