Refactor environment variable management and add shared environment file

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,26 +10,9 @@
         "memory": "12gb"
     },
     "containerEnv": {
-        // TensorFlow uses its own logging system, so let's set this environment
-        // variable to suppress their logs.
-        // 0=all logs, 1=no INFO, 2=no WARNING, 3=no ERROR
-        "TF_CPP_MIN_LOG_LEVEL": "2",
-
-        "KERAS_BACKEND": "tensorflow",
-        "MLFLOW_TRACKING_URI": "http://127.0.0.1:5000",
-        "ENDPOINT_NAME": "penguins",
-        
         // We need to set the PYTHONPATH environment variable to the /src directory
         // so Python can find the project modules.
-        "PYTHONPATH": "/workspaces/ml.school/src",
-
-        // We want to suppress MLflow's printing of logs to the terminal.
-        "MLFLOW_SUPPRESS_PRINTING_URL_TO_STDOUT": "1",
-
-        // Google ADK outputs a warning message whenever we use LiteLLM with a Gemini
-        // model instead of using Gemini directly. We can suppress these warnings by
-        // setting this environment variable.
-        "ADK_SUPPRESS_GEMINI_LITELLM_WARNINGS": "true",
+        "PYTHONPATH": "/workspaces/ml.school/src"
     },
     "customizations": {
         "vscode": {
@@ -49,5 +32,9 @@
             "version": "latest",
             "dockerDashComposeVersion": "none"
         }
-    }
+    },
+    "runArgs": [
+        "--env-file",
+        "env.shared"
+    ]
 }
